--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,21 @@
 .iconButton {
-  background-image: linear-gradient(to bottom, #fff 0%, #e0e0e0 100%);
-  background-color: #fff;
-  background-repeat: repeat-x;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
-    0 1px 1px rgba(0, 0, 0, 0.075);
   padding: 8px;
-  border: 1px solid transparent;
-  border-radius: 4px;
   cursor: pointer;
-  text-shadow: 0 1px 0 #fff;
-  color: #333;
-  font-size: 12px;
+  color: white;
+  font-size: 8px;
   line-height: 12px;
+  border: none;
+  background-color: transparent;
 }
 
 .iconButton:hover {
-  color: #333;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-  background-position: 0 -15px;
 }
 
 .iconButton[disabled] {
   opacity: 0.65;
-  box-shadow: none;
-  background-color: #e0e0e0;
-  background-image: none;
 }
 
 .iconButton[disabled]:hover {
-  border-color: #ccc;
   cursor: default;
 }
 
@@ -38,7 +24,8 @@
   width: 1px;
   background: white;
   position: relative;
-  margin-left: 20px;
+  margin-left: 21px;
+  display: block;
 }
 
 .zoomColor {
@@ -46,7 +33,7 @@
   width: 1px;
   position: absolute;
   left: 0px;
-  bottom: 0px;
+  top: 0px;
 }
 
 .zoomScrubber {
@@ -67,4 +54,18 @@
   position: absolute;
   left: -5px;
   top: -5px;
+}
+
+.zoomButtons {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 5px;
+  height: 300px;
+  width: 50px;
+  margin: auto;
+}
+
+.iconButton:focus {
+  outline: 0;
 }
